--- a/src/__pages/pageDesign/Components/BlockReviews/blockReviews.module.scss
+++ b/src/__pages/pageDesign/Components/BlockReviews/blockReviews.module.scss
@@ -8,15 +8,57 @@ $contentWidth: 1000px;
     align-items: center;
     font-size: 20px;
 
-    .galarywrapper{
+    margin: 0px 0px 20px 0px;
+
+    .galary__wrapper{
         width: $contentWidth;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0px 0px 10px 0px;
 
         img{
-            width: 200px;
+            // max-width: 700px;
+            // height: 100%;
+            margin: 0px;
+            padding: 0px;
         }
+
+        .galary__slide{
+            display: flex;
+            // height: 500px;
+            // min-width: 800px;
+
+            border: 1px solid red;
+            overflow: hidden;
+            p{
+                padding: 0px 10px 0px 10px;
+            }
+            .galary__slide_text{
+                width: 400px;
+            }
+        }
+
+        
+
     }
+
+    .point{
+        display: block;
+        width: 20px;
+        height: 20px;
+        padding: 0px;
+        border-color: black;
+        border: 10px solid black;
+        border-radius: 10px;
+        margin: 0px 10px;
+    }
+
+    .point_list{
+        display: flex;
+    }
+
     h3{
         font-size: 30px;
     }
