--- a/src/__pages/pageDesign/Design.module.scss
+++ b/src/__pages/pageDesign/Design.module.scss
@@ -2,55 +2,11 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-
+    align-items: flex-start;
     position: relative;
-    
     flex-grow: 1;
 
-    .viewPort{
-        display: flex;
-        background-color: rgb(223, 229, 233);
-        min-height: 300px;
-        min-width: 50%;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .menu{
-        background-color: rgb(223, 229, 233);
-        min-height: 300px;
-        min-width: 150px;
-        margin-left: 20px;
-    }
-
-
-    .pageList_wrapper{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: 1px solid red;
-        margin-right: 20px;
-        min-height: 300px;
-        max-height: 70vh;
-        box-sizing: border-box;
-        
-        .pageList__content{        
-            min-width: 150px;
-            padding: 10px;  
-            max-height: 70vh; 
-            overflow: hidden;
-            .pageList__content_movable{
-                position: relative;
-                height: auto;
-            }
-        }
-        button{
-            width: 100%;
-            height: 100%;
-            flex-grow: 1;
-        }
-    }
+    
 
     .button__left{
         
