--- a/src/__pages/pageDesign/ViewPort/ConditionalRender/BlockTask/TaskList/TaskItemWrapper/TaskItem/TaskItem.module.scss
+++ b/src/__pages/pageDesign/ViewPort/ConditionalRender/BlockTask/TaskList/TaskItemWrapper/TaskItem/TaskItem.module.scss
@@ -3,7 +3,7 @@
     height: 200px;
 
     margin: 0px 30px 0px 0px;
-    border: 1px solid red;
+    // border: 1px solid red;
 
     flex-shrink: 0;
     flex-wrap: nowrap;
