--- a/src/__pages/pageDesign/ViewPort/ConditionalRender/BlockTask/Modal_AddEdit/Image/Image.module.scss
+++ b/src/__pages/pageDesign/ViewPort/ConditionalRender/BlockTask/Modal_AddEdit/Image/Image.module.scss
@@ -11,6 +11,7 @@
 
     .block{
         border: 1px solid green;
+        
     }
 }
 
@@ -37,4 +38,5 @@
     overflow: hidden;
     padding: 0px;
     margin: 0px;
+    position: absolute;
 }
