--- a/src/__pages/pageDesign/PageList/preview/Preview.module.scss
+++ b/src/__pages/pageDesign/PageList/preview/Preview.module.scss
@@ -1,7 +1,7 @@
 .wrapper{
     width: 100%;
     height: 100px;
-
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
