--- a/src/__pages/pageDesign/ViewPort/ViewPort.module.scss
+++ b/src/__pages/pageDesign/ViewPort/ViewPort.module.scss
@@ -1,15 +1,19 @@
-.viewPort{
+.wrapper{
     display: flex;
-    position: relative;
+    // position: relative;
     flex-direction: column;
-    // background-color: rgb(223, 229, 233);
-    min-height: 300px;
+    background-color: rgb(223, 229, 233);
+    // min-height: 300px;
     min-width: 50%;
     justify-content: flex-start;
     align-items: flex-start;
     width: 100%;
     // max-width: 700px;
     // margin: 0px 20px 10px 20px;
+
+    flex-grow: 1;
+    
+    
 
     .viewBlock{
         display: flex;
@@ -22,5 +26,6 @@
         width: 100%;
         // max-width: 700px;
         // margin: 0px 20px 10px 20px;
+        flex-grow: 1;
     }
 }
