--- a/src/__pages/pageDesign/ViewPort/ConditionalRender/BlockAbout/BlockAbout.module.scss
+++ b/src/__pages/pageDesign/ViewPort/ConditionalRender/BlockAbout/BlockAbout.module.scss
@@ -15,12 +15,17 @@
     .content{
         display: flex;
         flex-direction: column;
-        width: 40%;
-        height: 30vh;
+        width: 500px;
+        height: 250px;
         border: 1px solid black;
         justify-content: space-between;
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.9);
+        border-radius: 30px;
         align-items: center;
+
+        padding: 10px;
+
+        white-space: pre;
     }
 
 }
