--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,14 +1,11 @@
 .wrapper{
     display: flex;
     flex-direction: column;
-    // border: 1px solid red;
-    padding: 10px 20px 10px 20px;
-
-    height: 50px;
-    justify-content: center;
-    
-
-    margin-bottom: 20px;
+    padding: 5px 20px 5px 20px;
+    height: 40px;
+    // justify-content: center;
+    border-bottom: 5px solid black;
+    // margin-bottom: 10px;
     .content{
         display: flex;
         flex-direction: row;
@@ -24,8 +21,8 @@
        
         .item{
             margin: 0px 30px 0px 0px;
-            box-shadow: 10px 5px 5px gray;
-            padding: 5px 30px 5px 30px;
+            box-shadow: 4px 2px 2px gray;
+            
             border-radius: 10px;
             background: rgba(220, 220, 220, 0.8);
             width: 100px;
@@ -33,6 +30,7 @@
             align-items: center;
             justify-content: center;
 
+            padding: 1px 30px 1px 30px;
             a{
                 text-decoration: none;
                 color: rgb(228, 18, 18);
