--- a/src/router/Root.module.scss
+++ b/src/router/Root.module.scss
@@ -1,16 +1,12 @@
 .wrapper{
     display: flex;
     flex-direction: column;
-    // padding: 5px;
-    
-    // min-width: 1000px;
     flex-grow: 1;
+    // width: 100%;
 
-    
-
-    input{
-        
-        flex-shrink: 1;
-        // width: 30%;
+    .content{
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
     }
 }
